# bpn

./: CMakeLists.txt  README.md
modules/base/: BackPropagationNetwork.cpp  BackPropagationNetwork.hpp  CMakeLists.txt  bpn_empty.cpp  dnn.hpp
